# TrayClip

./: .gitignore  HELP.md  HELP_ZH.md  LICENSE  README.md  README_EN.md  README_ZH.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: bump-version.mjs
src/: App.tsx  QuickPanel.tsx  UrlToast.tsx  index.css  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  clipboard.rs  db.rs  main.rs  models.rs  monitor.rs  paths.rs  updater_cmd.rs
src-tauri/src/commands/: mod.rs
src/components/: ClipCard.tsx  ClipList.tsx  ConfirmDialog.tsx  ContextMenu.tsx  DebouncedInput.tsx  GroupBar.tsx  GroupSelect.tsx  HistoryList.tsx  HotkeyRecorder.tsx  LLMResultDialog.tsx  SettingsPanel.tsx  TranslateDialog.tsx  WindowBar.tsx
src/components/ui/: button.tsx  card.tsx  scroll-area.tsx  sonner.tsx
src/hooks/: useAppData.ts  useAppEvents.ts  useAppVersion.ts  useClipLlm.ts  useConfirmDialog.ts  useDebouncedValue.ts  useImagePreview.ts  useNotice.ts  useUpdater.ts
src/lib/: api.ts  constants.ts  i18n.tsx  llm.ts  types.ts  utils.ts
src/lib/locales/: en.ts  zh.ts
