[package]
name = "trayclip"
version = "0.1.2"
description = "Pure local clipboard tool"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
anyhow = "1.0"
arboard = "3.4"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
image = { version = "0.25", default-features = false, features = ["png"] }
parking_lot = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-autostart = "2.0.1"
tauri-plugin-dialog = "2.0.1"
tauri-plugin-fs = "2.0.1"
tauri-plugin-global-shortcut = "2.0.1"
tauri-plugin-opener = "2.0.1"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_UI_Shell"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
